Update Connect.java