@@ -1,28 +1,41 @@
-package lockncharge;
+package application;
 
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.charset.StandardCharsets;
 import java.util.concurrent.FutureTask;
 
+/**
+ * Connect class - Define and implements the Post and Request HTTP methods used for API connection 
+ */
 public final class Connect{
 	
+	
 	public static class Conn {
-		private static String response = ""; //response from the server
 		
+		private static String response = ""; //response from the server is stored in this final instance variable
+		
+		/**
+		 * Post method - This method does a Post request to the server. 
+		 * @param source - The URL where the Post request is made to
+		 * @param body - The message, data, or contents sent from this application to the API server
+		 * @return - Returns the server's response if any in JSON format.
+		 * @throws Exception
+		 */
 		public final static String post(String source, String body) throws Exception{ 
 			
 			clearResponse();
 			//body contents
-			byte[] jsonBody = body.getBytes(StandardCharsets.UTF_8);		
-			int length = jsonBody.length;
+			byte[] jsonBody = body.getBytes(StandardCharsets.UTF_8); //Transform data into bytes and stores the result in a bytes array		
+			int length = jsonBody.length; //length of the array or body
 			
 			
-			
-			@SuppressWarnings("deprecation")
-			URL url = new URL(source);
+			//Establishes the POST method parameters
+			URI uri = new URI(source);
+			URL url = uri.toURL();
 			URLConnection conn = url.openConnection();
 			HttpURLConnection http = (HttpURLConnection) conn;
 			http.setRequestMethod("POST");
@@ -37,12 +50,15 @@ public final class Connect{
 			
 			if(http.getResponseCode() >= 200 && http.getResponseCode() < 300)
 			{
-				LockResponse input = new LockResponse(conn);
+				//Declares and initializes a LockResponse object where the connection is passed as an argument 
+				//Creates a runnable where the application waits for the server response
+				//Creates a new Thread to run this process and not block the main thread
+				LockResponse input = new LockResponse(conn); 
 				FutureTask<String> futureTask = new FutureTask<String>(input);
 				Thread t1 = new Thread(futureTask);
-				t1.start();
+				t1.start(); //starts new thread
 				
-				response = futureTask.get();
+				response = futureTask.get(); //Stored response from the server
 				
 			}
 			else
@@ -53,12 +69,20 @@ public final class Connect{
 			return response;
 		}
 		
+		/**
+		 * Get method - This method does a GET request to the server.
+		 * @param source - The URL where the GET request is made from
+		 * @param tempCode - Authentication token
+		 * @return - Response for the server as a String
+		 * @throws Exception
+		 */
 		public final static String get(String source, String tempCode) throws Exception{
 			
 			clearResponse();
 			
-			@SuppressWarnings("deprecation")
-			URL url = new URL(source);
+			//Establishes the GET method parameters
+			URI uri = new URI(source);
+			URL url = uri.toURL();
 			URLConnection conn = url.openConnection();
 			HttpURLConnection http = (HttpURLConnection) conn;
 			http.setRequestMethod("GET");
@@ -66,19 +90,22 @@ public final class Connect{
 			http.setRequestProperty("Content-type", "application/json; charset=UTF-8");
 			http.connect();
 			
-			if(http.getResponseCode() == http.HTTP_OK)
+			if(http.getResponseCode() == HttpURLConnection.HTTP_OK)
 			{
+				//Declares and initializes a LockResponse object where the connection is passed as an argument 
+				//Creates a runnable where the application waits for the server response
+				//Creates a new Thread to run this process and not block the main thread
 				LockResponse input = new LockResponse(conn);
 				FutureTask<String> futureTask2 = new FutureTask<String>(input);
 				Thread t2 = new Thread(futureTask2);
-				t2.start();
+				t2.start(); //Starts a new thread
 				
 				response = futureTask2.get();
-				
 			}
 			return response;
 		}
 		
+		//Clear any server response stored in the instance named response before using any of the POST or GET methods
 		public final static void clearResponse() { response = ""; }
 		
 	}
